    - Use idle-sleep setting from piuparts.conf.
    - Move statefile to slave-directory.
  * master: Get rid of the monitor-slave directory.
  * New script to enable Debug::pkgPackageManager during upgrades:
    scripts-debug-packagemanager/pre_distupgrade_debug_packagemanager
  * New bug template: unhandled_symlink_to_directory_conversion.
  * New bug template: installs_over_existing_symlink.

 -- Andreas Beckmann <debian@abeckmann.de>  Tue, 15 Jan 2013 11:51:43 +0100

piuparts (0.49) unstable; urgency=low

  [ Andreas Beckmann ]
  * Add support for dist-upgrade tests of "disappearing" packages:
    - master/report: Get candidate packages from distro in the "distro"
      setting in piuparts.conf and (target) versions to test from last distro
      entry in "upgrade-test-distros". In case a package no longer exists, use
      a pseudo-version "None".  (Closes: #656438)
    - slave: Support pseudo-version "None".
    - piuparts: Do not try to install unavailable packages after dist-upgrade.
  * piuparts.py:
    - Run custom scripts only once if dependencies are installed via a
      metapackage.
    - Rename --no-debsums option to --warn-on-debsums-errors.
    - Add --extra-repo=<sources.list line> option for adding extra
      package sources, e.g. backports, security or local repositories.
      The argument must be a valid line (including whitespace) that is added
      to sources.list verbatim. The option may be repeated to add more lines.
    - Qualify to the package names extracted from .debs with the version.
    - Add --testdebs-repo=<sources.list line> option. Provide the package(s)
      to be tested (and additional dependencies that are not yet in the
      archive) in a repository to enable dependency resolution with apt-get.
      Use for complex install and upgrade scenarios.
    - Add --distupgrade-to-testdebs option. During distupgrade tests override
      packages from the target distro with the packages from the testdebs