@@ -84,6 +84,11 @@ piuparts (0.50) UNRELEASED; urgency=low
   * New bug template: unhandled_symlink_to_directory_conversion.
   * New bug template: installs_over_existing_symlink.
 
+  [ David Steele ]
+  * detect_well_known_errors:
+    - Minor HTML syntax fix.
+    - Minor template integration.
+ 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 15 Jan 2013 11:51:43 +0100
 
 piuparts (0.49) unstable; urgency=low
